--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,10 @@
 [versioneer]
 VCS = git
 style = pep440
-versionfile_source = pygtkhelpers/_version.py
-versionfile_build = pygtkhelpers/_version.py
+versionfile_source = pyGtkHelpers/_version.py
+versionfile_build = pyGtkHelpers/_version.py
 tag_prefix = v
-parentdir_prefix = pygtkhelpers-
+parentdir_prefix = pyGtkHelpers-
 
 [build_sphinx]
 source_dir = docs
