--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,8 @@
 [tox]
-envlist=py39
+# https://github.com/gnome-keysign/gnome-keysign
+# I don't seem to be able to say "python 2" and "python 3", only.
+skip_missing_interpreters = true
+envlist = py26,py27,py32,py35,py39
 
 [testenv]
 sitepackages=True
